[webcanvas] highlight active pad only optionally, off by default
Can be changed in the options menu
Make looking similar as with native ROOT

--- a/ui5/canv/view/Canvas.view.xml
+++ b/ui5/canv/view/Canvas.view.xml
@@ -83,6 +83,7 @@
                   <Menu itemSelected="onOptionsMenuAction">
                      <items>
                         <MenuItem text="Auto resize" icon="{/AutoResizeIcon}" tooltip="Canvas automatically resized with web browser"/>
+                        <MenuItem text="Highlight gPad" icon="{/HighlightPadIcon}" enabled="{/isRoot6}" tooltip="Highlight active pad in the canvas"/>
                      </items>
                   </Menu>
                </menu>
